2025-01-20T01:42:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12859338679 # 769
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-20
* notice: last 14d: unq all: 13 64
* notice: prev accum: outdated-unq outdated-all / unq all: 942 4934 / 954 4996
* notice: next accum: outdated-unq outdated-all / unq all: 942 4934 / 955 4998
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +4 +25 -0 -0 / 4 25
* notice: removed / changed dates: [] / [2025-01-19]

2025-01-19T12:36:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12853590810 # 768
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
* notice: last 14d: unq all: 12 62
* notice: prev accum: outdated-unq outdated-all / unq all: 942 4934 / 951 4973
* notice: next accum: outdated-unq outdated-all / unq all: 942 4934 / 954 4996
* notice: prev exec diff / last date diff / accum: unq all: +3 +23 -0 -0 / +3 +23 -0 -0 / 3 23
* notice: removed / changed dates: [] / [2025-01-19]

2025-01-19T01:46:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12849281003 # 767
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
* notice: last 14d: unq all: 9 39
* notice: prev accum: outdated-unq outdated-all / unq all: 935 4918 / 946 4944
* notice: next accum: outdated-unq outdated-all / unq all: 942 4934 / 951 4973
* notice: prev exec diff / last date diff / accum: unq all: +5 +29 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [2024-12-29 2024-12-30 2024-12-31 2025-01-02 2025-01-04] / [2025-01-13 2025-01-16 2025-01-17]

2025-01-12T00:41:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12728953892 # 766