@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-01-20T01:42:08Z",
+  "timestamp" : "2025-01-21T01:40:15Z",
   "count_outdated" : 4934,
   "uniques_outdated" : 942,
-  "count" : 4998,
-  "uniques" : 955,
+  "count" : 4999,
+  "uniques" : 956,
   "views" : [
     {
       "timestamp": "2025-01-08T00:00:00Z",
@@ -58,6 +58,15 @@
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ],
       "uniques_decinc": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2025-01-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
