@@ -1,6 +1,6 @@
 {
-  "count": 64,
-  "uniques": 13,
+  "count": 65,
+  "uniques": 14,
   "views": [
     {
       "timestamp": "2025-01-08T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2025-01-19T00:00:00Z",
       "count": 25,
       "uniques": 4
+    },
+    {
+      "timestamp": "2025-01-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
