@@ -1,3 +1,12 @@
+2025-01-21T01:40:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12878493221 # 771
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-21
+* notice: last 14d: unq all: 14 65
+* notice: prev accum: outdated-unq outdated-all / unq all: 942 4934 / 955 4998
+* notice: next accum: outdated-unq outdated-all / unq all: 942 4934 / 956 4999
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-01-20]
+
 2025-01-20T01:42:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12859338679 # 769
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-20
